@@ -4,6 +4,8 @@
 * Modify tags on single message, they are updated in thread-view
   and thread-index.
 * scss: fix #82: make all variables global.
+* C-d / C-u / Page in thread-index: Page and move cursor in thread
+  index.
 
 == v0.5 / 2016-02-06
 
